--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,6 +1,11 @@
 * {
   font-size: 16px;
 }
+
+.row{
+  margin-top:35px;
+}
+
   .left-panel {
       /* position: fixed; */
       top: 0;
@@ -55,6 +60,7 @@
     
     .left-panel.collapsed {
       width: 0px;
+      
       margin-left: 0px;
     }
     
