--- a/css/style.css
+++ b/css/style.css
@@ -662,3 +662,11 @@ Contact Page CSS
 hr.solid{
     border-top: 3px solid #008AFC;
 }
+
+.ScheduleOfClassesContainer
+{
+    width: 100%;
+    height: 80vh;
+    overflow: hidden;
+    overflow-y: scroll;
+}
