Fixed class titles

--- a/css/class-list.css
+++ b/css/class-list.css
@@ -6,7 +6,14 @@ table {
     table-layout: fixed;
   }
   
-  th, td {
+table h4 {
+    width: 500px;
+    margin-top: 30px;
+
+}
+
+
+  td {
     text-align: left;
     border: 1px solid black;
     word-wrap: break-word;
