--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,7 @@ a:hover,
 /* 01 navbar css */
 
 .header {
-    background-color: white;
+    background-color: #0064a4;
     padding: 1rem 0;
 }
 
@@ -194,27 +194,33 @@ a:hover,
 .header .navbar-brand p {
     font-size: 3rem;
     padding-left: 1rem;
-    color: #0064a4;
+    color: white;
     font-weight: bold;
 }
 .header .navbar-brand {
     display: flex;
-    font-size: 1rem;
+    font-size: 2rem;
     flex-direction: row;
-    color:black;
+    color: white;
     align-items: center;
 }
 
 .header .navbar-nav .nav-link {
-    color: black;
+    color: white;
     /* font-family: var(--secondary-font); */
     font-family: Arial, Helvetica, sans-serif;
     /* text-transform: uppercase; */
-    font-size: 1.3rem;
+    font-size: 1.5rem;
+    text-transform: uppercase;
     font-weight: 600;
     /* padding: 0.5rem 2rem;
     margin: 0px 0.2rem; */
 }
+
+.header .navbar-nav .nav-link.active {
+    color: #FFD200;
+}
+
 
 /* dropdown menu */
 .header .dropdown-menu {
