--- a/css/style.css
+++ b/css/style.css
@@ -474,14 +474,16 @@ a:hover,
 
 /* Bag intgration */
 
+
 .bag-icon-wrapper .bag-button-class img{
     width: 9rem;
-
+    border:none;
+    background-color:transparent;
+    outline:none;
 }
 .bag-icon-wrapper .bag-button-class img:hover{
     animation: shake 0.5s;
     animation-iteration-count: infinite;
-    display: none;;
 }
 @keyframes shake {
     0% { transform: translate(1px, 1px) rotate(0deg); }
@@ -664,8 +666,4 @@ hr.solid{
     height: 80vh;
     overflow: hidden;
     overflow-y: scroll;
-}
-
-.tab-content{
-    
 }
