--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ h2 span {
 }
 
 h3 {
-    font-size: 3rem;
+    font-size: 2rem;
     font-weight: 800;
     line-height: 1.3;
     font-family: var(--secondary-font);
@@ -480,6 +480,7 @@ a:hover,
     border:none;
     background-color:transparent;
     outline:none;
+    z-index: 2;
 }
 .bag-icon-wrapper .bag-button-class img:hover{
     animation: shake 0.5s;
