--- a/css/bag-window.css
+++ b/css/bag-window.css
@@ -6,15 +6,18 @@
     left:100%;
     bottom: -300px;
   }
+
+
   
   .window {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    width: 400px;
-    height: 250px;
-    background-color: rgb(162, 125, 125);
+    width: 250px;
+    height: 410px;
+    background-color: #DFDFDF;
     border: 1px solid black;
+    border-radius: 25px;
     padding: 10px;
     transition: transform 0.3s ease-out;
     transform: translateX(100%);
@@ -60,6 +63,10 @@
 
 #bag-window-id ul ul ul {
   font-size: 1.5rem;
+}
+
+#big-list {
+  gap: 100px;
 }
 
 .bag-button{
