--- a/css/bag-window.css
+++ b/css/bag-window.css
@@ -13,18 +13,29 @@
     position: fixed;
     bottom: 20px;
     right: 20px;
-    width: 250px;
+    width: 275px;
     height: 410px;
-    background-color: #DFDFDF;
-    border: 1px solid black;
+    background-color: whitesmoke;
+    border: 3px solid #0064a4;
     border-radius: 25px;
     padding: 10px;
     transition: transform 0.3s ease-out;
     transform: translateX(100%);
+    padding-top: 0px;
   }
   
   .window-open {
     transform: translateX(0%);
+  }
+
+  .button-area {
+    text-align: right;
+    padding-right: 5px;
+  }
+  #bag-window-close {
+    font-size: 3rem;
+    background-color: transparent;
+    font-weight: bold;
   }
   
 #bag-window-id {
@@ -66,8 +77,11 @@
   font-size: 1.5rem;
 }
 
-#big-list {
-  gap: 100px;
+
+
+
+#bag-list img {
+  width: 20px;
 }
 
 .bag-button{
@@ -82,3 +96,27 @@
 /* .bag-icon-wrapper{
  border: solid;
 } */
+
+.course-heading {
+  font-weight: bold;
+}
+
+.discussion-heading {
+  text-decoration: underline;
+}
+
+
+.lab-heading {
+  text-decoration: underline;
+}
+
+
+ul .left {
+  text-align: right;
+}
+
+
+.info {
+  font-style: italic;
+  font-size: 1.5rem;
+}
