--- a/css/style.css
+++ b/css/style.css
@@ -482,10 +482,11 @@ a:hover,
     outline:none;
     z-index: 2;
 }
-.bag-icon-wrapper .bag-button-class img:hover{
+.bag-icon-wrapper .bag-button-class img .shake{
     animation: shake 0.5s;
     animation-iteration-count: infinite;
 }
+
 @keyframes shake {
     0% { transform: translate(1px, 1px) rotate(0deg); }
     10% { transform: translate(-1px, -2px) rotate(-1deg); }
