--- a/css/style.css
+++ b/css/style.css
@@ -751,8 +751,10 @@ hr.solid{
     position: relative;
     width: 100%;
     height: 0;
-    padding-bottom: 57%; /* Sets the aspect ratio to 3:2 */
+    padding-bottom: 62%; 
     overflow: hidden;
+    opacity: 0.7;
+    border-radius: 1rem;
   }
   
   .instructionPage img {
@@ -760,15 +762,16 @@ hr.solid{
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: auto;
     padding: 1rem;
-    border-radius: 2rem;
+    border-radius: 1rem;
     object-fit: cover; /* Resizes the image to cover the container */
   }
     
   @media only screen and (max-width: 768px) {
     .instructionPage {
-      padding-bottom: 100%; 
+      padding-bottom: 150%; 
+      height: auto;
       border-radius: 1rem;
     }
   }
@@ -776,6 +779,7 @@ hr.solid{
   .enrollWindowStatement p{
     color: #000;
     text-align: center;
+
   }
   .enrollWindowStatement span{
     color: red;
@@ -783,3 +787,13 @@ hr.solid{
     font-weight: bold;
 
   }
+  .enrollWindowStatement {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    text-align: center;
+    padding: 1rem;;
+    background-color: #ADD8E6;
+    margin:1rem;
+    border-radius: 1rem;
+
+  }
+  
