Fixed from page instruction statement and add headers for the suggested class tab table

--- a/css/style.css
+++ b/css/style.css
@@ -747,35 +747,6 @@ hr.solid{
     border-radius: 2rem;
   } */
 
-  .instructionPage {
-    position: relative;
-    width: 100%;
-    height: 0;
-    padding-bottom: 62%; 
-    overflow: hidden;
-    opacity: 0.7;
-    border-radius: 1rem;
-  }
-  
-  .instructionPage img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: auto;
-    padding: 1rem;
-    border-radius: 1rem;
-    object-fit: cover; /* Resizes the image to cover the container */
-  }
-    
-  @media only screen and (max-width: 768px) {
-    .instructionPage {
-      padding-bottom: 150%; 
-      height: auto;
-      border-radius: 1rem;
-    }
-  }
-
   .enrollWindowStatement p{
     color: #000;
     text-align: center;
@@ -794,6 +765,8 @@ hr.solid{
     background-color: #ADD8E6;
     margin:1rem;
     border-radius: 1rem;
-
+    transition: 0.2s;
   }
-  
+  .enrollWindowStatement:hover{
+    transform: scale(1.02);
+  }
