--- a/css/chatButton.css
+++ b/css/chatButton.css
@@ -73,7 +73,11 @@
     width: 6rem;
     z-index: 3;
     bottom: 1rem;
-    left: 92%
+    left: 92%;
+    transition: 0.2s;
+}
+.panic-button-class:hover{
+  transform: scale(1.3);
 }
 
 .panic-icon-wrapper .panic-button-class img{
