--- a/css/chatButton.css
+++ b/css/chatButton.css
@@ -47,9 +47,10 @@
   
   /* Add a red background color to the cancel button */
   .help-container .cancel {
-    background-color: red;
+    background-color: #FFA000;
     margin-top: 20px;
-    
+    color: black;
+    font-size: 1.5rem;
   }
   
   /* Add some hover effects to buttons */
@@ -82,4 +83,8 @@
 
 .panic-icon-wrapper .panic-button-class img{
     width: 5.5rem;
+}
+
+.chat-popup h1 {
+  text-transform: none;
 }
