--- a/css/chatButton.css
+++ b/css/chatButton.css
@@ -60,8 +60,11 @@
 
   .panic-button {
     border:none;
-    background-color:transparent;
+    background-color:#0064a4;
     outline:none;
+    border-radius: 50%;
+    width: 7rem;
+    height: 7rem;
  }
 
 /* replacing whatsapp with panic button integration */
@@ -76,13 +79,14 @@
     bottom: 1rem;
     left: 92%;
     transition: 0.2s;
+    
 }
 .panic-button-class:hover{
   transform: scale(1.3);
 }
 
 .panic-icon-wrapper .panic-button-class img{
-    width: 5.5rem;
+    width: 4rem;
 }
 
 .chat-popup h1 {
