--- a/css/bag-window.css
+++ b/css/bag-window.css
@@ -25,7 +25,7 @@
     bottom: 20px;
     right: 20px;
     width: 275px;
-    height: 410px;
+    height: 50vh;
     background-color: whitesmoke;
     border: 3px solid #0064a4;
     border-radius: 25px;
@@ -33,6 +33,11 @@
     transition: transform 0.3s ease-out;
     transform: translateX(100%);
     padding-top: 0px;
+    cursor: grab;
+  }
+
+  .window:active {
+    cursor: grabbing;
   }
   
   .window-open {
