--- a/css/style.css
+++ b/css/style.css
@@ -476,7 +476,7 @@ a:hover,
 
 
 .bag-icon-wrapper .bag-button-class img{
-    width: 9rem;
+    width: 7.5rem;
     border:none;
     background-color:transparent;
     outline:none;
@@ -769,4 +769,21 @@ hr.solid{
   }
   .enrollWindowStatement:hover{
     transform: scale(1.02);
+  }
+
+button {
+    cursor: pointer;
+    transition: 0.2s all;
+
+}
+
+button:hover {
+    transform: scale(0.98);
+}
+
+  button:active {
+    transform: scale(0.98);
+    /* Scaling button to 0.98 to its original size */
+    box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
+    /* Lowering the shadow */
   }
