--- a/css/style.css
+++ b/css/style.css
@@ -729,23 +729,6 @@ hr.solid{
     transform: translateY(0%);
   }
 
-  /* .instructionPage
-  {
-    position: relative;
-    width: 100%;
-    height: 620px;
-    overflow:hidden;
-    border-radius: 2rem;
-  }
-  .instructionPage img
-  {
-    position: absolute;
-    padding: 1rem;
-    padding-right:3rem;
-    width: 100%;
-    height: 100%;
-    border-radius: 2rem;
-  } */
 
   .enrollWindowStatement p{
     color: #000;
@@ -786,4 +769,15 @@ button:hover {
     /* Scaling button to 0.98 to its original size */
     box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
     /* Lowering the shadow */
+  }
+
+
+   
+  .peterImgClass img
+  {
+    object-fit: cover;
+    border-radius: 5%;
+    padding: 8px;
+    padding-bottom: 15px;
+    opacity: 0.8;
   }
