study list view

--- a/css/bag-window.css
+++ b/css/bag-window.css
@@ -155,7 +155,7 @@ ul .left {
 .bottom {
   text-align: center;
 }
-#save-button {
+#enroll-button {
   background-color: #0064a4;
   color: white;
   border-radius: 10%;
