added list view

--- a/css/bag-window.css
+++ b/css/bag-window.css
@@ -155,6 +155,13 @@ ul .left {
   border-bottom:1px solid black;
 }
 
+ul .left img{
+  transition: 0.2s;
+}
+.left img:hover{
+  transform: scale(1.3);
+}
+
 
 .info {
   font-style: italic;
@@ -179,3 +186,4 @@ ul .left {
 .right{
   padding-left: 1.5rem;
 }
+
