--- a/css/responsive-style.css
+++ b/css/responsive-style.css
@@ -185,3 +185,16 @@
             width: 330px;
         }
      }
+
+     @media only screen 
+    and (device-width: 414px) 
+    and (device-height: 896px) 
+    and (-webkit-device-pixel-ratio: 2) { 
+        body #bag-window-id {
+
+            display: none;
+            right: 15px;
+            top: 45vh;
+            width: 330px;
+        }
+    }
