--- a/css/responsive-style.css
+++ b/css/responsive-style.css
@@ -198,3 +198,16 @@
             width: 330px;
         }
     }
+
+    @media only screen 
+    and (device-width: 375px) 
+    and (device-height: 812px) 
+    and (-webkit-device-pixel-ratio: 3) { 
+        body #bag-window-id {
+
+            display: none;
+            right: 15px;
+            top: 45vh;
+            width: 330px;
+        }
+    }
