--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,7 @@ a:hover,
 .header {
     background-color: #0064a4;
     padding: 1rem 0;
+    border: 1px solid white;
 }
 
 .header .navbar-brand img {
