--- a/css/style.css
+++ b/css/style.css
@@ -211,9 +211,10 @@ a:hover,
     /* font-family: var(--secondary-font); */
     font-family: Arial, Helvetica, sans-serif;
     /* text-transform: uppercase; */
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     text-transform: uppercase;
-    font-weight: 600;
+    font-weight: 525;
+
     /* padding: 0.5rem 2rem;
     margin: 0px 0.2rem; */
 }
@@ -652,21 +653,21 @@ Contact Page CSS
     font-size: 1.5rem;
     justify-content: center;
 }
+
+
 .nav-tabs .nav-link.active {
     font-size: 1.5rem;
-    border-radius: 1rem;
     font-weight: bold;
     /* border-radius: 2rem !important; */
-    border-color: #dee2e6 #dee2e6 #dee2e6;
-    
+    border-color: white white #FFD200;
+    border-bottom: 6px solid #FFD200;
 }
 .nav-tabs .nav-link {
     font-size: 1.5rem;
-    border-radius: 1rem;
 }
 /* Solid Separator */
 hr.solid{
-    border-top: 3px solid #008AFC;
+    border-top: 3px solid #777777;
 }
 
 .ScheduleOfClassesContainer
@@ -731,7 +732,7 @@ hr.solid{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     text-align: center;
     padding: 1rem;;
-    background-color: #ADD8E6;
+    background-color: white;
     margin:1rem;
     border-radius: 1rem;
     transition: 0.2s;
@@ -766,4 +767,9 @@ button:hover {
     padding: 8px;
     padding-bottom: 15px;
     opacity: 0.8;
+  }
+
+
+.navbar-brand p{
+    font-weight:500 !important;
   }
