drop button fix

--- a/css/studyList.css
+++ b/css/studyList.css
@@ -2,14 +2,15 @@
     display: flex;
     width: 900%;
     align-items: end;
-    justify-content: start;
+    justify-content: space-between;
 }
 
 .top button {
     width: 80px;
     height: 40px;
-    border-radius: 45%;
-    background-color: lavender;
+    border-radius: 15%;
+    background-color: rgb(238, 179, 167);
+
 }
 
 #study-list-containerID
