--- a/css/auto-enroll-btn.css
+++ b/css/auto-enroll-btn.css
@@ -1,44 +1,60 @@
-#auto-enroll-button {
-    background-color: #0064a4;
-    color: white;
-    border-radius: 10%;
-    text-align: center;
-    padding: 2px 5px;
-    display: none;
-  }
+.autoEnrollClass{
+  padding-top: 1.3rem;
+}
+#auto-enroll-button{
+  background-color: #0064a4;
+  color: white;
+  border-radius: 10px;
+  text-align: center;
+  /* padding: 2px 5px; */
+  display: none;
+  width: 12rem;
+}
 
-  .modal1 {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.4);
-  }
-  
-  .modal-content {
-    background-color: #fefefe;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    border-radius: 5px;
-  }
-  
-  .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
-  
+#modalMsgID{
+  color: black;
+}
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 5%;
+  bottom: 20%;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+  background-color: white;
+  margin: 10% auto;
+  padding:2rem;
+  padding-bottom: 5rem;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 400px;
+  position: relative;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+}
+
+.confirm {
+  position: absolute;
+  bottom: 15px;
+  left: 35%;
+  background-color: green;
+  color: white;
+  width: 12rem;
+  height: 4rem;
+  border-radius: 15px;
+}
+
+.confirm:hover{
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+  transform: scale(1);
+}
