--- a/css/homepage.css
+++ b/css/homepage.css
@@ -24,7 +24,7 @@
 
     .panel-content label {
       font-weight: bold;
-      color: white;
+      color: rgb(232, 232, 232);
     }
   
     .left-panel h3 {
@@ -36,6 +36,7 @@
       font-size: 1.7rem;
       font-family: var(--primary-font);
       font-weight: 600;
+      box-shadow: 0px 0px 2px 1px rgba(0,0,0, 0.2);
     }
     
     .collapse-btn img {
@@ -130,8 +131,10 @@
     font-size: 1.5rem;
     margin-bottom: 10px;
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: 8px;
     box-sizing: border-box;
+    background-color: rgb(244, 244, 244);
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
   }
   
   
@@ -226,6 +229,8 @@
     background-color: transparent;
     width: 100%;
     text-align: start;
+    padding-top: 5px;
+    padding-bottom: 5px;
   }
 
   #search-results button:hover {
