Fixed filter implementation

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -136,6 +136,10 @@
     background-color: rgb(244, 244, 244);
     box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
   }
+
+  #course-search {
+    margin-bottom: 5px;
+  }
   
   
   .circle-button {
