--- a/css/class-list.css
+++ b/css/class-list.css
@@ -26,7 +26,8 @@ tr {
     word-wrap: break-word;
     font-size: 1.25rem;
     padding-top: 5px;
-    padding-bottom: 5px
+    padding-bottom: 5px;
+    height: 60px;
   }
 
 td:first-child {
