--- a/css/bag-window.css
+++ b/css/bag-window.css
@@ -56,19 +56,16 @@
     justify-content: end;
     gap: 5px;
     padding:10px;
-
   }
 
   .close-bag {
     font-size: 1.2rem;
   }
   #bag-window-close {
-    display: sticky;
     font-size: 2.5rem;
     background-color: transparent;
     font-weight: 500;
     font-family: sans-serif;
-  
   }
   
 #bag-window-id {
@@ -183,11 +180,10 @@ ul .left img{
 #enroll-button {
   background-color: #0064a4;
   color: white;
-  border-radius: 10px;
+  border-radius: 10%;
   text-align: center;
-  /* padding: 2px 5px; */
+  padding: 2px 5px;
   display: none;
-  width: 12rem;
 }
 
 .right{
