change the color of the send button in the chat box

--- a/css/chat-box.css
+++ b/css/chat-box.css
@@ -46,7 +46,7 @@
   .chat-input button {
     width: 20%;
     height: 30px;
-    background-color: #333;
+    background-color:#ffd200;
     color: #fff;
     border: none;
     cursor: pointer;
