add confirmatio when a user wants to drop a class

--- a/css/studyList.css
+++ b/css/studyList.css
@@ -8,8 +8,8 @@
 .top button {
     width: 80px;
     height: 40px;
-    border-radius: 15%;
-    background-color: rgb(238, 179, 167);
+    border-radius: 15px;
+    background-color: #FF8989;
 
 }
 
